--- a/eggplant-brownie/View/Base.lproj/Main.storyboard
+++ b/eggplant-brownie/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XAp-qF-LuW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vJU-Rx-wxT">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -31,10 +31,33 @@
                             <outlet property="delegate" destination="XAp-qF-LuW" id="fhk-RQ-ZnP"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="6H9-e0-zmK">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="Qtd-Ju-Ucy">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="i17-4s-FlC"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OqV-zW-L7M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-820" y="41"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vtb-0n-Fy3">
+            <objects>
+                <navigationController id="vJU-Rx-wxT" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="S9H-cv-7lK">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="XAp-qF-LuW" kind="relationship" relationship="rootViewController" id="kjN-Z9-U0h"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ymy-1n-u4t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1645" y="41"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -82,6 +105,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Fqd-uA-OpJ"/>
                     <connections>
                         <outlet property="happynesTextField" destination="VUd-UQ-1y1" id="ehG-5k-Y12"/>
                         <outlet property="nameTextField" destination="SHr-4L-Fua" id="Db5-QR-dei"/>
@@ -89,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="75"/>
+            <point key="canvasLocation" x="20" y="41"/>
         </scene>
     </scenes>
     <resources>
